k8s/gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: main-route
  namespace: default
spec:
  parentRefs:
  - name: ecommerce-gateway
  rules:
  
  # --- PRODUCT SERVICE ROUTES ---
  - matches:
    - path:
        type: PathPrefix
        value: /api/products
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /products
    backendRefs:
    - name: product-service
      port: 5000

  - matches:
    - path:
        type: PathPrefix
        value: /uploads
    backendRefs:
    - name: product-service
      port: 5000

  - matches:
    - path:
        type: PathPrefix
        value: /api/suppliers
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /suppliers
    backendRefs:
    - name: product-service
      port: 5000

  # --- ORDER SERVICE ROUTE ---
  - matches:
    - path:
        type: PathPrefix
        value: /api/orders
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /orders
    backendRefs:
    - name: order-service
      port: 8080
        
  # --- USER SERVICE ROUTE ---
  - matches:
    - path:
        type: PathPrefix
        value: /api/users
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /users
    backendRefs:
    - name: user-service
      port: 8081
      
  # --- PAYMENT SERVICE ROUTE ---
  - matches:
    - path:
        type: PathPrefix
        value: /api/payments
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /payments
    backendRefs:
    - name: payment-service
      port: 8083

  # --- FRONTEND ROUTE ---
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-app
      port: 8080
